Fix: Dashboard Open Course Button on Dark Mode
Because
* The text was dark gray instead of white when dark mode is enabled.

This commit:
* Give the open course button the odin-dark-clear-button helper class.

--- a/app/assets/stylesheets/dark-mode.css
+++ b/app/assets/stylesheets/dark-mode.css
@@ -142,3 +142,7 @@ pre:not(.line-numbers) code {
 .odin-dark-clear-button:hover {
   color: black !important;
 }
+
+.skill__sub-title {
+  color: var(--dark-font-color) !important;
+}
